added experience desktop layout

--- a/src/component/styles.module.scss
+++ b/src/component/styles.module.scss
@@ -34,11 +34,17 @@
 //skills page styles start
 
 .boxStyle {
-    background-color: #f2f3f5;
     padding-top: 5rem;
     padding-bottom: 5rem;
     padding-left: 1rem;
     padding-right: 1rem;
 }
 
+.bgColorSkills{
+    background-color: #f2f3f5;
+}
 // skills page styles start
+
+.bgColorExperience{
+    background-color: #ffffff;
+}
