added edu styles

--- a/src/component/styles.module.scss
+++ b/src/component/styles.module.scss
@@ -49,3 +49,14 @@
     background-color: #ffffff;
     max-width: 100vw;
 }
+
+.eduIcon{
+    color: #2664eb;
+    background-color: #dbeafe;
+    width: 4rem;
+    height: 4rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    border-radius: 4rem;
+}
