--- a/src/component/education/styles.module.scss
+++ b/src/component/education/styles.module.scss
@@ -92,6 +92,12 @@
     color: #4b5563;
 }
 
+.achivementIssuedby{
+    margin: 0px;
+    font-size: medium;
+    color: #4b5563;
+}
+
 .eduKeyCourcesHead{
     font-weight: 600;
 }
