fixed over flow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 @custom-variant dark (&:is(.dark *));
 
 html, body {
-	overflow-x: hidden;
-	width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
+    
 }
